--- a/DataStructure/数据结构/树/红黑树.md
+++ b/DataStructure/数据结构/树/红黑树.md
@@ -1,6 +1,6 @@
 #  红黑树
 
-## 什么是 2-3 树
+## 1. 什么是 2-3 树
 
 　　红黑树是完美平衡的 2-3 树的一种实现。所以，理解 2-3 树对掌握红黑树是至关重要的。
 
@@ -10,7 +10,7 @@
 
 　　在二叉树中，一个 Node 保存一个值，在 2-3 树种把这样的节点称之为 2- 节点。
 
-　　如果一个节点包含了两个值（可以当作两个节点的融合），在 2-3 树种把这样的节点称之为 3- 节点。完美平衡的 2-3 树所有空链接到根节点的举例都应该是相同的。
+　　如果一个节点包含了两个值（可以当作两个节点的融合），在 2-3 树中把这样的节点称之为 3- 节点。完美平衡的 2-3 树所有空链接到根节点的举例都应该是相同的。
 
 　　下面看下《算法 4》对 2-3- 节点的定义：
 
@@ -23,17 +23,17 @@
 
 　　2-3 树是一颗多叉搜索树，所以数据的插入类似二分搜索树。
 
-## 2-3 树的插入操作
+## 2. 2-3 树的插入操作
 
 　　红黑树是对完美平衡的 2-3 树的一种实现，所以主要介绍完美平衡的 2-3 树的插入过程。
 
 　　完美平衡的 2-3 树插入分为以下几种情况（为了方便画图默认把空链接去掉）：
 
-### 向 2- 节点插入新键
+### 2.1. 向 2- 节点插入新键
 
 ![](image/向2-结点中插入新键.png)
 
-### 向一棵只含有一个 3- 结点的树中插入新键
+### 2.2. 向一棵只含有一个 3- 结点的树中插入新键
 
 　　因为 2-3 树中节点只能是 2- 节点或者 3- 节点。
 
@@ -41,7 +41,7 @@
 
 ![](image/向一棵只含有一个3-节点的树中插入新键.jpg)
 
-### 向一个父节点为 2- 节点的 3- 节点插入新键
+### 2.3. 向一个父节点为 2- 节点的 3- 节点插入新键
 
 　　向 3- 点中再插入一个键就成了 4- 节点，需要对其进行分解，对中间的键向上融合。
 
@@ -49,23 +49,23 @@
 
 ![](image/向一个父节点为2-节点的3-节点插入新键.jpg)
 
-### 向一个父节点为 3- 节点的 3- 节点中插入新键
+### 2.4. 向一个父节点为 3- 节点的 3- 节点中插入新键
 
 　　在这种情况下，向 3- 结点插入新键形成暂时的 4- 结点，向上分解，父节点又形成一个 4- 结点，然后继续向上分解。
 
 ![](image/向一个父节点为3-节点的3-节点中插入新键.jpg)
 
-### 一个 4- 节点分解为一棵 2-3 树 6 种情况
+### 2.5. 一个 4- 节点分解为一棵 2-3 树 6 种情况
 
 ![](image/一个4-节点分解为一棵2-3树6种情况.jpg)
 
-## 红黑树（ReadBlackTree）
+## 3. 红黑树（ReadBlackTree）
 
-### 完美平衡的 2-3 树和红黑树的对应关系
+### 3.1. 完美平衡的 2-3 树和红黑树的对应关系
 
 　　红黑树的背后的基本思想就是用标准的二分搜索树和一些额外的信息来表示 2-3 树的。
 
-　　这额外的信息指的就是替换 3- 节点的方式。因为 2-3 树不是二叉树，因为 2-3 树不是二叉树（最后有 3 叉），所以需要把 3- 节点替换成 2- 节点。
+　　这额外的信息指的就是替换 3- 节点的方式。因为 2-3 树不是二叉树（最后有 3 叉），所以需要把 3- 节点替换成 2- 节点。
 
 　　将 2-3 树的链接定义为两种类型：黑链接、红链接。
 
@@ -95,7 +95,7 @@
 
 ![](image/2-3树和红黑树的一一对应关系图.png)
 
-### 红黑树的 5 个基本性质的分析
+### 3.2. 红黑树的 5 个基本性质的分析
 
 　　介绍完了 2-3 树和红黑树的对应关系后，再来看下红黑树的 5 个基本性质：
 
@@ -117,11 +117,11 @@
 
 5. 从任意的一个节点到叶子节点，经过的黑色节点是一样的。
 
-   完美平衡的 2-3 树和黑链接得出的结论：“完美平衡的 2-3 树是保持完美黑色平衡的，任意空链接到根节点的路径上的黑链接数量相同”，所以从任意一个节点到叶子节点，经过的黑色节点数是一样的。
+   完美平衡的 2-3 树和黑链接得出的结论：“ 完美平衡的 2-3 树是保持完美黑色平衡的，任意空链接到根节点的路径上的黑链接数量相同 ”，所以从任意一个节点到叶子节点，经过的黑色节点数是一样的。
 
-### 红黑树实现 2-3 树过程中的节点旋转和颜色翻转
+### 3.3. 红黑树实现 2-3 树过程中的节点旋转和颜色翻转
 
-#### 颜色翻转
+#### 3.3.1. 颜色翻转
 
 　　为什么要颜色翻转（flipColor）？在插入的过程中可能出现如下情况：两个左右子节点都是红色。
 
@@ -131,6 +131,8 @@
 
 　　所以需要进行颜色转换：把该节点的左右子节点设置为黑色，自己设置为红色。
 
+（代码实现）
+
 ```java
 private void flipColor(Node<K, V> node) {
 	node.color = RED;
@@ -139,7 +141,7 @@ private void flipColor(Node<K, V> node) {
 }
 ```
 
-#### 左旋转
+#### 3.3.2. 左旋转
 
 　　左旋转情况大致有两种：
 
@@ -152,20 +154,20 @@ private void flipColor(Node<K, V> node) {
 ![](image/左旋转2.png)
 
 ```
-
+（代码实现）
 ```
 
-#### 右旋转
+#### 3.3.3. 右旋转
 
 　　需要右旋的情况：连续出现两个左红色链接。
 
 ![](image/右旋转.png)
 
 ```
-
+（代码实现）
 ```
 
-### 红黑树实现 2-3 树插入操作
+### 3.4. 红黑树实现 2-3 树插入操作
 
 　　2-3 树插入时只要满足不出现两个连续左红色链接、右红色链接、左右都是红色链接的情况就可以了。
 
@@ -176,10 +178,10 @@ private void flipColor(Node<K, V> node) {
 3. 如果节点的左右子链接都是红色，需要颜色翻转。
 
 ```
-
+（代码实现）
 ```
 
-#### 对比 JDK 中 TreeMap 的插入操作
+### 3.5. 对比 JDK 中 TreeMap 的插入操作
 
 　　这样下来红黑树依然保持着它的五个基本性质，下面来对比 JDK 中的 TreeMap 的插入操作。
 
@@ -193,31 +195,31 @@ private void flipColor(Node<K, V> node) {
 
 　　通过对比发现两者的插入后的结构不一样，而且 Java TreeMap 是允许左右子节点都是红色节点。
 
-　　这就和用完美平衡的 2-3 树作为红黑树实现的基础结构相违背了，不允许左节点是红色，也不允许两个连续的红色左节点，不允许左右节点同时是红色。
+　　这就和用完美平衡的 2-3 树作为红黑树实现的基础结构相违背了，不允许右节点是红色，也不允许两个连续的红色左节点，不允许左右节点同时是红色。
 
-　　这也是《算法 4》 在将到红黑树时遵循的。但是 JDK TreeMap（红黑树）是允许右节点时红色，也允许左右节点同时是红色，Java TreeMap 的红黑树实现从它的代码注解说明它的实现来自《算法导论》。
+　　这也是《算法 4》 在讲到红黑树时遵循的。但是 JDK TreeMap（红黑树）是允许右节点是红色，也允许左右节点同时是红色，Java TreeMap 的红黑树实现从它的代码注解说明它的实现来自《算法导论》。
 
 　　说明《算法 4》和《算法导论》中的所介绍的红黑树产生了一些 “ 出入 ”。
 
-### 2-3-4- 树
+### 3.6. 2-3-4 树
 
 　　2-3-4 树和 2-3 树非常相像。2-3 树允许存在 2- 节点和 3- 节点，类似的 2-3-4- 树允许存在 2- 节点、3- 节点和 4- 节点。
 
 ![](image/2-3-4树节点.png)
 
-#### 向 2- 节点、3- 节点插入元素
+#### 3.6.1. 向 2- 节点、3- 节点插入元素
 
 　　向 2- 节点插入元素，这个上面介绍的 2- 3 树是一样，
 
 　　向 3- 节点插入元素，形成一个 4- 节点，因为 2-3-4- 树允许 4- 节点的存在，所以不需要向上分解。
 
-#### 向 4- 节点插入元素
+#### 3.6.2. 向 4- 节点插入元素
 
 　　向 4- 节点插入元素，需要分解 4- 节点，因为 2-3-4- 树最多只允许存在 4- 节点，如：
 
 ![](image/向4-节点插入元素1.png)
 
-　　如果待插入的 4- 节点，它的父节点也是一个 4- 节点呢？如下图的 2-3-4 树插入节点K：
+　　如果待插入的 4- 节点，它的父节点也是一个 4- 节点呢？如下图的 2-3-4 树插入节点 K：
 
 ![](image/向4-节点插入元素2.png)
 
@@ -230,7 +232,7 @@ private void flipColor(Node<K, V> node) {
 
 ![](image/自上而下的插入方案.png)
 
-#### 2-3-4 树和红黑树的等价关系
+#### 3.6.3. 2-3-4 树和红黑树的等价关系
 
 　　2-3-4 树和红黑树的等价关系和 2-3 树和红黑树的等价关系是类似的。不同的是 2-3-4 的 4- 节点分解后的节点颜色变成如下形式：
 
@@ -243,20 +245,20 @@ private void flipColor(Node<K, V> node) {
 　　上面在介绍红黑树实现 2-3 树的时候讲解了它的插入操作：
 
 ```
-
+（代码实现）
 ```
 
 　　可以很轻松的把它改成 2-3-4 的插入逻辑（只需要把颜色翻转的逻辑提到二分搜索的前面即可）：
 
 ```
-
+（代码实现）
 ```
 
 　　下面是 2-3-4 树和 2-3 树插入结果的对比图：
 
 ![](image/2-3-4树和2-3树插入结果的对比图.png)
 
-　　一开始用红黑树实现完美平衡的 2-3 树，左右节点是不会都是红色的，现在用红黑树实现 2-3-4 树，左右节点的可以同时是红色的，这样的红黑树效率更高。因为如果遇到左右节点是红色，就进行颜色翻转，还需要对红色的父节点进行向上回溯，因为父节点染成红色了，可能父节点的父节点也是红色，可能需要进行节点旋转或者颜色翻转操作，所以说 2-3-4 树式的红黑树效率更高。
+　　一开始用红黑树实现完美平衡的 2-3 树，左右节点是不会都是红色的，现在用红黑树实现 2-3-4 树，左右节点的可以同时是红色的，这样的红黑树效率更高。因为如果遇到左右节点是红色，2-3 树就进行颜色翻转，还需要对红色的父节点进行向上回溯，因为父节点染成红色了，可能父节点的父节点也是红色，可能需要进行节点旋转或者颜色翻转操作，所以说 2-3-4 树式的红黑树效率更高。
 
 　　《算法 4》是用红黑树实现 2-3 树的，并不是 2-3-4 树。但是如果是用红黑树实现 2-3-4 树就和《算法导论》上介绍的红黑树一样吗？不一样。
 
@@ -276,7 +278,7 @@ private void flipColor(Node<K, V> node) {
 
 　　下面来分析下一般意义上的红黑树的插入和删除操作，也就是《算法导论》上介绍的红黑树。
 
-### 红黑树的插入操作
+### 3.7. 红黑树的插入操作
 
 　　插入操作有两种情况是非常简单的，所以在这里单独说一下：
 
@@ -300,9 +302,9 @@ private void flipColor(Node<K, V> node) {
 
 　　调整策略：由于父节点是红色，叔叔节点是红色，爷爷节点是黑色，执行颜色翻转操作。然后把当前正在处理的节点设置为爷爷节点，如果爷爷的父节点是黑色插入操作劫色，如果是红色继续处理。
 
-4. case 4. 输数节点是黑色，正在处理的节点是右节点
+4. case 4. 叔叔节点是黑色，正在处理的节点是右节点
 
-　　调整策略：由于父节点是红色，叔叔节点为黑色，那么爷爷节点肯定是黑色，把正在处理的节点设置为父节点，然后左旋，形成 CASE5 情况。
+　　调整策略：由于父节点是红色，叔叔节点为黑色，那么爷爷节点肯定是黑色，把正在处理的节点设置为父节点，然后左旋，形成 case 5 情况。
 
 5. case 5. 叔叔节点为黑色，正在处理的节点是左孩子
 
@@ -312,7 +314,7 @@ private void flipColor(Node<K, V> node) {
 
 ![](image/红黑树插入3.png)
 
-### 红黑树删除操作
+### 3.8. 红黑树删除操作
 
 　　红黑树的删除操作比插入操作更加复杂一些。
 
@@ -364,7 +366,7 @@ private void flipColor(Node<K, V> node) {
 
 　　上面处理的所有情况都是基于正在处理的节点是左节点，如果要调整正在处理的节点是右节点的情况，就是上面的处理的镜像，插入操作也是同理。
 
-## Java TreeMap、TreeSet 源码分析
+## 4. Java TreeMap、TreeSet 源码分析
 
 　　TreeMap 的底层就是用红黑树实现的，它在插入后调整操作主要在 fixAfterInsertion 方法里，如下所示：
 
@@ -423,14 +425,14 @@ private void flipColor(Node<K, V> node) {
         while (x != root && colorOf(x) == BLACK) {
             if (x == leftOf(parentOf(x))) {
                 TreeMapEntry<K,V> sib = rightOf(parentOf(x));
-				// case 4 的情况
+								// case 4 的情况
                 if (colorOf(sib) == RED) {
                     setColor(sib, BLACK);
                     setColor(parentOf(x), RED);
                     rotateLeft(parentOf(x));
                     sib = rightOf(parentOf(x));
                 }
-				// case 5 的情况
+								// case 5 的情况
                 if (colorOf(leftOf(sib))  == BLACK &&
                     colorOf(rightOf(sib)) == BLACK) {
                     setColor(sib, RED);
@@ -487,9 +489,7 @@ private void flipColor(Node<K, V> node) {
 
 　　TreeSet 底层就是用 TreeMap 来实现的，往 TreeSet 添加进的元素当作 TreeMap 的 key，TreeMap 的 value 是一个常量 Object。掌握了红黑树，对于这两个集合的原理就不难理解了。
 
-
-
-## 参考文章
+## 6. 参考文章
 
 1. [数据结构与算法（十四）深入理解红黑树和 JDK TreeMap 和 TreeSet 源码分析](https://chiclaim.blog.csdn.net/article/details/81046088)
 
