事件分发机制

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -159,10 +159,16 @@
 6. 图
 7. gradle
 8. 数据库
-9. View 事件分发机制
-10. ViewGroup 事件分发机制
-11. glide 整理
-12. 简历
+9. Set 集合
+10. 并查集
+11. 堆
+12. 哈希表
+13. 线性表
+14. 栈
+15. View 事件分发机制 - 已完成
+16. ViewGroup 事件分发机制 - 已完成
+17. glide 整理
+18. 简历
 
 
 
