--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -148,6 +148,8 @@
 ### 2020 年 7 月
 
 1. 写者读者问题
+2. View 事件分发机制
+3. ViewGroup 事件分发机制
 
 #### 计划
 
@@ -165,10 +167,10 @@
 12. 哈希表
 13. 线性表
 14. 栈
-15. View 事件分发机制 - 已完成
-16. ViewGroup 事件分发机制 - 已完成
 17. glide 整理
 18. 简历
+17. NIO
+18. 组件化与插件化
 
 
 
