--- a/DataStructure/算法/查找算法/二分查找算法.md
+++ b/DataStructure/算法/查找算法/二分查找算法.md
@@ -7,4 +7,5 @@
 ## 参考文章
 
 1. [Java实现二分查找算法](https://www.cnblogs.com/morethink/p/8379475.html)
+2. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
