--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -153,24 +153,49 @@
 
 #### 计划
 
-1. 排序算法
-2. 查找算法
-3. 红黑树
-4. b树
-5. huffmen树
-6. 图
-7. gradle
-8. 数据库
-9. Set 集合
-10. 并查集
-11. 堆
-12. 哈希表
-13. 线性表
-14. 栈
-17. glide 整理
-18. 简历
-17. NIO
-18. 组件化与插件化
+1. 查找算法
+   1. 查找算法知识
+   2. 顺序查找
+   3. 二分查找
+   4. 插值查找
+   5. 斐波那契查找
+   6. 二叉树查找
+   7. 平衡查找树之2-3查找树（2-3 Tree）
+   8. 平衡查找树之红黑树（Red-Black Tree）
+   9. B 树和 B+ 树（B Tree/B+ 树）
+   10. 分块查找
+   11. 哈希查找
+2. 排序算法
+   1. 排序算法总结
+   2. 直接插入排序
+   3. 希尔排序
+   4. 简单选择排序
+   5. 堆排序
+   6. 冒泡排序
+   7. 快速排序
+   8. 归并排序
+   9. 基数排序
+3. 常用的五大算法
+   1. 递归
+   2. 回溯算法
+   3. 分治算法
+   4. 贪心算法
+4. 红黑树
+5. b树
+6. huffmen树
+7. 图
+8. Set 集合
+9. 并查集
+10. 堆
+11. 哈希表
+12. 线性表
+13. 栈
+14. glide 整理
+15. gradle
+16. 数据库
+17. 简历
+18. NIO
+19. 组件化与插件化
 
 
 
