--- a/DataStructure/数据结构/树/红黑树与2-3树.md
+++ b/DataStructure/数据结构/树/红黑树与2-3树.md
@@ -153,8 +153,17 @@ private void flipColor(Node<K, V> node) {
 
 ![](image/左旋转2.png)
 
-```
-（代码实现）
+```java
+private Node<K, V> rotateLeft(Node<K, V> node) {
+    Node<K, V> x = node.right;
+    node.right = x.left;
+
+    x.left = node;
+    x.color = node.color;
+
+    node.color = RED;
+    return x;
+}
 ```
 
 #### 3.3.3. 右旋转
@@ -164,7 +173,16 @@ private void flipColor(Node<K, V> node) {
 ![](image/右旋转.png)
 
 ```
-（代码实现）
+private Node<K, V> rotateRight(Node<K, V> node) {
+    Node<K, V> x = node.left;
+    node.left = x.right;
+    x.right = node;
+
+    x.color = node.color;
+    node.color = RED;
+
+    return x;
+}
 ```
 
 ### 3.4. 红黑树实现 2-3 树插入操作
@@ -177,8 +195,42 @@ private void flipColor(Node<K, V> node) {
 2. 如果出现两个连续的左红色链接，需要右旋。
 3. 如果节点的左右子链接都是红色，需要颜色翻转。
 
-```
-（代码实现）
+```java
+private Node<K, V> _add(Node<K, V> node, K key, V value) {
+    //向叶子结点插入新结点
+	if (node == null) {
+		size++;
+		return new Node<>(key, value);
+	}
+
+	//二分搜索的过程
+	if (key.compareTo(node.key) < 0)
+		node.left = _add(node.left, key, value);
+	else if (key.compareTo(node.key) > 0)
+		node.right = _add(node.right, key, value);
+	else
+		node.value = value;
+
+	//1,如果出现右侧红色链接，左旋
+	if (isRed(node.right) && !isRed(node.left)) {
+		node = rotateLeft(node);
+	}
+
+	//2,如果出现两个连续的左红色链接，右旋
+	if (isRed(node.left) && isRed(node.left.left)) {
+		node = rotateRight(node);
+	}
+
+	//3,如果结点的左右子链接都是红色，颜色翻转
+	if (isRed(node.left) && isRed(node.right)) {
+		flipColor(node);
+	}
+}
+
+public void add(K key, V value) {
+    root = _add(root, key, value);
+    root.color = BLACK;
+}
 ```
 
 ### 3.5. 对比 JDK 中 TreeMap 的插入操作
@@ -244,14 +296,102 @@ private void flipColor(Node<K, V> node) {
 
 　　上面在介绍红黑树实现 2-3 树的时候讲解了它的插入操作：
 
-```
-（代码实现）
+```java
+private Node<K, V> _add(Node<K, V> node, K key, V value) {
+    //向叶子结点插入新结点
+	if (node == null) {
+		size++;
+		return new Node<>(key, value);
+	}
+
+	//二分搜索的过程
+	if (key.compareTo(node.key) < 0)
+		node.left = _add(node.left, key, value);
+	else if (key.compareTo(node.key) > 0)
+		node.right = _add(node.right, key, value);
+	else
+		node.value = value;
+
+	//1,如果出现右侧红色链接，左旋
+	if (isRed(node.right) && !isRed(node.left)) {
+		node = rotateLeft(node);
+	}
+
+	//2,如果出现两个连续的左红色链接，右旋
+	if (isRed(node.left) && isRed(node.left.left)) {
+		node = rotateRight(node);
+	}
+
+	//3,如果结点的左右子链接都是红色，颜色翻转
+	if (isRed(node.left) && isRed(node.right)) {
+		flipColor(node);
+	}
+}
 ```
 
 　　可以很轻松的把它改成 2-3-4 的插入逻辑（只需要把颜色翻转的逻辑提到二分搜索的前面即可）：
 
+```java
+private Node<K, V> _add(Node<K, V> node, K key, V value) {
+    //向叶子结点插入新结点
+	if (node == null) {
+		size++;
+		return new Node<>(key, value);
+	}
+	
+	//split 4-nodes on the way down
+	if (isRed(node.left) && isRed(node.right)) {
+		flipColor(node);
+	}
+
+	//二分搜索的过程
+	if (key.compareTo(node.key) < 0)
+		node.left = _add(node.left, key, value);
+	else if (key.compareTo(node.key) > 0)
+		node.right = _add(node.right, key, value);
+	else
+		node.value = value;
+
+	//fix right-leaning reds on the way up
+	if (isRed(node.right) && !isRed(node.left)) {
+		node = rotateLeft(node);
+	}
+
+	//fix two reds in a row on the way up
+	if (isRed(node.left) && isRed(node.left.left)) {
+		node = rotateRight(node);
+	}
+
+}
 ```
-（代码实现）
+
+```java
+//使用2-3-4树插入数据 [E,C,G,B,D,F,J,A]
+
+RB2_3_4Tree<Character, Character> rbTree = new RB2_3_4Tree<>();
+rbTree.add('E', 'E');
+rbTree.add('C', 'C');
+rbTree.add('G', 'G');
+rbTree.add('B', 'B');
+rbTree.add('D', 'D');
+rbTree.add('F', 'F');
+rbTree.add('J', 'J');
+rbTree.add('A', 'A');
+rbTree.levelorder(rbTree.root);
+
+
+//使用2-3树插入数据 [E,C,G,B,D,F,J,A]
+
+RBTree<Character, Character> rbTree = new RBTree<>();
+rbTree.add('E', 'E');
+rbTree.add('C', 'C');
+rbTree.add('G', 'G');
+rbTree.add('B', 'B');
+rbTree.add('D', 'D');
+rbTree.add('F', 'F');
+rbTree.add('J', 'J');
+rbTree.add('A', 'A');
+rbTree.levelorder(rbTree.root);
 ```
 
 　　下面是 2-3-4 树和 2-3 树插入结果的对比图：
