--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -209,7 +209,7 @@
    * Messenger - 多进程通信
    * IdleHandler
    * IntentService - Service 的知识里面有提到一些
-   * 事件分发机制
+   * 事件分发机制 - 已完成
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
    * AIDL
    * PMS
@@ -218,7 +218,7 @@
    * 多进程通信
    * ArrayDeque
    * CopyOnWriteArrayList
-   * ConcurrentHashMap
+   * ConcurrentHashMap - 已完成
    * ArrayMap
    * SpareArray
    * nano ptotobufs
@@ -344,7 +344,13 @@
 
 24. 注解 - 已完成
 
-25. 
+25. Vector
+
+26. SortedMap / TreeMap
+
+27. CopyOnWriteArrayList
+
+28. ConcurrentModificationException 异常
 
 
 
