--- a/DataStructure/数据结构/图/图.md
+++ b/DataStructure/数据结构/图/图.md
@@ -1,6 +1,18 @@
 #  图
 
-　　图
+　　树的数据结构中，树的表示时分层的，例如父子关系，而其他关系只能间接的表示，例如同级关系。而图却不受这种限制。
+
+　　图是由顶点（或节点）及顶点之间的关系组成的集合。通常，图中的顶点数量或者一个顶点与其他顶点之间的连线的个数不受限制。
+
+## 定义
+
+　　主要有以下两种定义。
+
+1. 二元组定义
+
+
+
+
 
 ## 参考文章
 
