--- a/DataStructure/算法/查找算法/顺序查找.md
+++ b/DataStructure/算法/查找算法/顺序查找.md
@@ -1,6 +1,36 @@
 #  顺序查找
 
-　　顺序查找
+## 顺序查找的基本思想
+
+　　顺序查找也称为线性查找，属于无序查找算法。从数据结构线性表的一端开始，顺序扫描，依次将扫描到的节点关键字和给定 k 相比较，若相等则表示查找成功，若扫描结束仍没有找到关键字等于 k 的节点，表示查找失败。
+
+　　顺序查找适合于存储结构为顺序存储或链接存储的线性表。
+
+## 顺序查找的代码
+
+　　直接遍历一遍数组即可。
+
+```
+
+```
+
+　　测试方法：
+
+````
+
+````
+
+
+
+## 顺序查找的复杂度
+
+　　查找成功时平均查找长度为：（假设每个元素的概率是相等的） ASL = 1/n(1+2+3+...+n) = (n+1)/2。
+
+　　当查找不成功时，需要 n+1 比较，时间复杂度为 O(n)。
+
+　　所以，顺序查找的时间复杂度为 O(n)。
+
+
 
 ## 参考文章
 
