--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -150,27 +150,28 @@
 1. 写者读者问题
 2. View 事件分发机制
 3. ViewGroup 事件分发机制
+4. huffmen树
 
 #### 计划
 
 1. 查找算法
-   1. 查找算法知识
-   2. 顺序查找
-   3. 二分查找
-   4. 插值查找
-   5. 斐波那契查找
-   6. 二叉树查找
-   7. 平衡查找树之2-3查找树（2-3 Tree）
-   8. 平衡查找树之红黑树（Red-Black Tree）
-   9. B 树和 B+ 树（B Tree/B+ 树）
-   10. 分块查找
-   11. 哈希查找
+   1. 查找算法知识 - 7/19
+   2. 顺序查找 - 7/14
+   3. 二分查找 - 7/15
+   4. 插值查找 -7/20
+   5. 斐波那契查找 - 7/26
+   6. 二叉树查找 - 7/21
+   7. 平衡查找树之2-3查找树（2-3 Tree） - 7/22
+   8. 平衡查找树之红黑树（Red-Black Tree） - 7/23
+   9. B 树和 B+ 树（B Tree/B+ 树）  - 7/24
+   10. 分块查找 - 7/25
+   11. 哈希查找 - 7/25
 2. 排序算法
-   1. 排序算法总结
-   2. 直接插入排序
-   3. 希尔排序
-   4. 简单选择排序
-   5. 堆排序
+   1. 排序算法总结 - 7/25
+   2. 直接插入排序 - 7/25
+   3. 希尔排序 - 7/26
+   4. 简单选择排序  - 7/26
+   5. 堆排序  - 7/26
    6. 冒泡排序
    7. 快速排序
    8. 归并排序
@@ -181,15 +182,15 @@
    3. 分治算法
    4. 贪心算法
 4. 红黑树
-5. b树
-6. huffmen树
-7. 图
-8. Set 集合
-9. 并查集
-10. 堆
-11. 哈希表
-12. 线性表
-13. 栈
+5. b树 - 7/14
+6. b+树 -7/14
+7. 图 - 7/15
+8. Set 集合 -7/16
+9. 并查集 - 7/16
+10. 堆 - 7/17
+11. 哈希表 - 7/17
+12. 线性表 - 7/18
+13. 栈 - 7/18
 14. glide 整理
 15. gradle
 16. 数据库
@@ -198,6 +199,83 @@
 19. 组件化与插件化
 
 
+
+7/14
+
+* b树
+* b+树
+
+7/15
+
+* 图
+* 顺序查找
+* 二分查找
+
+7/16
+
+* Set 集合
+* 插值查找
+* 归并排序
+
+7/17
+
+* 并查集
+* 查找算法知识
+
+7/18
+
+* 堆
+* 斐波那契查找
+* 二叉树查找
+
+7/19
+
+* 哈希表
+* glide 整理
+* 冒泡排序
+
+7/20
+
+* 线性表 
+* 平衡查找树之2-3查找树（2-3 Tree）
+* 递归
+
+7/21
+
+* 栈
+* 平衡查找树之红黑树（Red-Black Tree）
+* 回溯算法
+
+7/22
+
+* B 树和 B+ 树（B Tree/B+ 树）
+* 排序算法总结
+* 分治算法
+
+7/23
+
+* 分块查找
+* 快速排序
+* 直接插入排序
+
+7/24
+
+* 哈希查找
+* 希尔排序
+* 贪心算法
+
+7/25
+
+* 简单选择排序
+* 基数排序
+* gradle
+* 组件化与插件化
+
+7/26
+
+* 堆排序
+* 数据库
+* NIO
 
 ## 盘点需要做的事情（详细）
 
