--- a/DataStructure/算法/查找算法/二分查找算法.md
+++ b/DataStructure/算法/查找算法/二分查找算法.md
@@ -1,8 +1,78 @@
 #  二分查找算法
 
-　　查找算法
+## 基本思想
+
+　　二分查找（binary search），也称折半搜索，是一种在有序数组中查找某一特定元素的搜索算法。搜索过程从数组的中间元素开始，如果中间元素正好是要查找的元素，则搜索过程结束；如果某一特定元素大于或者小于中间元素，则在数组大小或小于中间元素的那一半中查找，而且跟开始一样从中间元素开始比较。如果在某一步骤数组为空，则代表找不到，这种搜索算法每一次比较都使搜索范围缩小一半。
+
+　　**基本思想**：也称为是折半查找，属于有序查找算法。用给定值 k 先于中间节点的关键字比较，中间节点把线性表分成两个子表，若相等则查找成功；若不相等，再根据 k 与该中间节点关键字的比较结果确定下一步查找哪个子表，这样递归进行，直到查找到或查找结束发现表中没有这样的节点。
+
+　　元素必须是有序的，如果是无需的则要先进行排序操作。
+
+　　注：折半查找的前提条件是需要有序表顺序存储，对于静态查找表，一次排序后不再变化，折半查找能得到不错的效率。但对于需要频繁执行插入或删除操作的数据集来说，维护有序的排序会带来不小的工作量，那就不建议使用。
+
+* 时间复杂度：这般搜索每次都把搜索区域减少一半，时间复杂度为 O(logN)(N 代表集合中元素的个数)。
+* 空间复杂度：O(1)。虽以递归形式定义，但是尾递归，可改写尾循环。
 
 ![](image/binary-search.gif)
+
+## 代码描述
+
+　　先用快排对数据进行排序，然后设定 begin=0,end=length-1，mid = begin+(end-begin)/2，查找 mid 的值与 key 的大小。
+
+　　如果相同，返回 index。
+
+　　如果 mid<begin，那么 begin = mid+1，如果 mid>key，那么 end = mid-1。
+
+　　然后循环，直到 end < begin，返回 -1。
+
+```
+
+```
+
+
+
+### 递归
+
+```
+
+```
+
+
+
+### 非递归
+
+```
+
+```
+
+## 二分查找的复杂度
+
+　　最坏情况下，关键字比较次数为 log2(n+1)，且期望时间复杂度为 O(log2n)。
+
+　　ASL = log2(n+1)-1
+
+　　注意：在数组中排序后，再插入新值，要将新值后面的所有位后移一位，要 O(n) 时间。
+
+## 二分查找中值的计算
+
+　　如何计算二分查找中的中值，有两种计算方法：
+
+1. 算法一：mid = (low+high)/2
+2. 算法二：mid = low+(hight-low)/2
+
+　　看起来是算法一简洁，算法二提取之后，跟算法一没有什么区别，但是实际上，区别是存在的。算法一的做法，在极端情况下，(low_high) 存在着溢出的风险，进而得到错误的 mid 结果，导致程序错误。而算法二能够保证计算出来的 mid，一定大于 low，小于 high，不存在溢出的问题。
+
+## 二分查找法的缺陷
+
+　　二分查找法的 O(logN) 让它成为十分高效的算法。不过它的缺陷却也是那么明显的。就在它的限定之上：必须有序，很难保证数组都是有序的。当然可以在构建数组的时候进行排序，可是又落到了第二个瓶颈上：它必须是数组。
+
+　　数组读取效率是 O(1)，可是它的插入和删除某个元素的效率却是 O(n)。因为导致构建有序数组变成低效的事情。
+
+　　解决这些缺陷问题更好的方法应该是使用二叉查找树，最好自然是自平衡二叉查找树了，即能高效的（O(NlogN)）构建有序元素集合，又能如同二分查找法一样快速（O(logN)）的搜寻目标数。
+
+
+
+
 
 ## 参考文章
 
