--- a/DataStructure/算法/查找算法/顺序查找.md
+++ b/DataStructure/算法/查找算法/顺序查找.md
@@ -10,17 +10,91 @@
 
 　　直接遍历一遍数组即可。
 
-```
+```java
+/**
+ * 顺序查找
+ */
+public class SequenceSearch {
 
+    /**
+     * 根据顺序查找的算法，返回在 nums 数组中 key 的 index
+     * 直接在数组中遍历即可
+     * @param nums 数组
+     * @param key 查找的值
+     * @return 找到返回在数据的下标，没找到，返回 -1
+     */
+    public static int sequenceSearch(int[] nums,int key){
+        for (int i = 0; i<nums.length;i++){
+            int now = nums[i];
+            if (now == key){
+                return i;
+            }
+        }
+        return -1;
+    }
+}
 ```
 
 　　测试方法：
 
+````java
+/**
+ * 查找测试
+ */
+public class SearchTest {
+    public static void main(String[] args) {
+        int[][] testTable = new int[][]{
+                createRandomIntArray(-100, 100, 50),
+                createRandomIntArray(-100, 100, 400),
+                createRandomIntArray(-1000, 1000, 500)
+        };
+        int[] testKey = createRandomIntArray(-100, 100, 10);
+        for (int[] ito : testTable) {
+            for (int key : testKey) {
+                test(ito, key);
+            }
+        }
+    }
+
+    private static void test(int[] ito, int key) {
+        int rtn;
+        for (int i = 0; i < ito.length; i++) {
+            System.out.println(ito[i] + "");
+        }
+        System.out.println();
+        System.out.println("length=" + ito.length);
+        // 开始时打印数组
+        long begin = System.currentTimeMillis();
+        rtn = SequenceSearch.sequenceSearch(ito, key);// 顺序查找
+        long end = System.currentTimeMillis();
+        System.out.println("查找：" + key + "，结果为：" + rtn);
+        System.out.println();
+        System.out.println("耗时：" + (end - begin) + "ms");
+        System.out.println("---------------------");
+        System.out.println("---------------------");
+    }
+
+    public static int[] createRandomIntArray(int min, int max, int length) {
+        int[] result = new int[length];
+        for (int i = 0; i < length; i++) {
+            double rand = Math.random();
+            result[i] = (int) (min + (max - min) * rand);
+        }
+        return result;
+    }
+}
 ````
 
-````
+输出为：
 
+```java
+length=500
+查找：56，结果为：387
 
+耗时：0ms
+---------------------
+---------------------
+```
 
 ## 顺序查找的复杂度
 
