--- a/DataStructure/算法/查找算法/顺序查找.md
+++ b/DataStructure/算法/查找算法/顺序查找.md
@@ -1,12 +1,20 @@
 #  顺序查找
 
-## 顺序查找的基本思想
+## 1. 顺序查找的基本思想
 
-　　顺序查找也称为线性查找，属于无序查找算法。从数据结构线性表的一端开始，顺序扫描，依次将扫描到的节点关键字和给定 k 相比较，若相等则表示查找成功，若扫描结束仍没有找到关键字等于 k 的节点，表示查找失败。
+　　顺序查找也称为线性查找，属于无序查找算法。从数据结构线性表的一端开始，顺序扫描，依次将扫描到的节点关键字和给定关键字 k 相比较，若相等则表示查找成功，若扫描结束仍没有找到关键字等于 k 的节点，表示查找失败。
 
-　　顺序查找适合于存储结构为顺序存储或链接存储的线性表。
+　　顺序查找适合于存储结构为顺序存储或链式存储的线性表。
 
-## 顺序查找的代码
+## 2. 顺序查找的复杂度
+
+　　查找成功时平均查找长度为：（假设每个元素的概率是相等的） ASL = 1/n(1+2+3+...+n) = (n+1)/2。
+
+　　当查找不成功时，需要 n+1 比较，时间复杂度为 O(n)。
+
+　　所以，顺序查找的时间复杂度为 O(n)。
+
+## 3. 顺序查找的代码
 
 　　直接遍历一遍数组即可。
 
@@ -24,12 +32,15 @@ public class SequenceSearch {
      * @return 找到返回在数据的下标，没找到，返回 -1
      */
     public static int sequenceSearch(int[] nums,int key){
+      	// 遍历数组
         for (int i = 0; i<nums.length;i++){
             int now = nums[i];
+          	// 判断当前值是否等于查找的值
             if (now == key){
                 return i;
             }
         }
+      	// 没有找到，返回 -1
         return -1;
     }
 }
@@ -96,17 +107,7 @@ length=500
 ---------------------
 ```
 
-## 顺序查找的复杂度
-
-　　查找成功时平均查找长度为：（假设每个元素的概率是相等的） ASL = 1/n(1+2+3+...+n) = (n+1)/2。
-
-　　当查找不成功时，需要 n+1 比较，时间复杂度为 O(n)。
-
-　　所以，顺序查找的时间复杂度为 O(n)。
-
-
-
-## 参考文章
+## 4. 参考文章
 
 1. [查找算法总结-java版](https://blog.csdn.net/xushiyu1996818/article/details/90604118)
 
