--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -151,12 +151,13 @@
 2. View 事件分发机制
 3. ViewGroup 事件分发机制
 4. huffmen树
+5. 顺序查找
 
 #### 计划
 
 1. 查找算法
    1. 查找算法知识 - 7/19
-   2. 顺序查找 - 7/14
+   2. 顺序查找 - 已完成
    3. 二分查找 - 7/15
    4. 插值查找 -7/20
    5. 斐波那契查找 - 7/26
@@ -208,7 +209,7 @@
 7/15
 
 * 图
-* 顺序查找
+* 顺序查找 - 已完成
 * 二分查找
 
 7/16
